hphp/hack/test/typecheck/compile_test_cast.php.exp
WARN: File "compile_test_cast.php", line 26, characters 9-18:
Casting A to string: casting a non-primitive type to a primitive rarely yields a useful value. Did you mean to extract a value from this object before casting it, or to do a null-check? (Warn[12005])
ERROR: File "compile_test_cast.php", line 28, characters 12-14:
Encountered unexpected token `$x3`. (Parsing[1002])
ERROR: File "compile_test_cast.php", line 28, characters 10-10:
Unbound name: `A` (a global constant) (Naming[2049])
ERROR: File "compile_test_cast.php", line 26, characters 9-18:
Cannot cast a value of type `A` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
ERROR: File "compile_test_cast.php", line 28, characters 10-10:
Unbound global constant (Typing) (Typing[4106])
